syntax = "proto3";

package ide_query;
option go_package = "ide_query/ide_query_proto";

// Indicates the success/failure for analysis.
message Status {
  enum Code {
    OK = 0;
    FAILURE = 1;
  }
  Code code = 1;
  // Details about the status, might be displayed to user.
  optional string message = 2;
}

message GeneratedFile {
  // Path to the file relative to IdeAnalysis.build_artifact_root.
  string path = 1;

  // The text of the generated file, if not provided contents will be read
  // from the path above in user's workstation.
  optional bytes contents = 2;
}

message SourceFile {
  // Path to the source file relative to repository root.
  string path = 1;

  // Working directory used by the build system. All the relative
  // paths in compiler_arguments should be relative to this path.
  // Relative to repository root.
  string working_dir = 2;

  // Compiler arguments to compile the source file. If multiple variants
  // of the module being compiled are possible, the query script will choose
  // one.
  repeated string compiler_arguments = 3;

  // Any generated files that are used in compiling the file.
  repeated GeneratedFile generated = 4;

  // Paths to all of the sources, like build files, code generators,
  // proto files etc. that were used during analysis. Used to figure
  // out when a set of build artifacts are stale and the query tool
  // must be re-run.
  // Relative to repository root.
  repeated string deps = 5;

  // Represents analysis status for this particular file. e.g. not part
  // of the build graph.
  optional Status status = 6;
}

message IdeAnalysis {
  // Path relative to repository root, containing all the artifacts
  // generated by the build system. GeneratedFile.path are always
  // relative to this directory.
  string build_artifact_root = 1;

  repeated SourceFile sources = 2;

  // Status representing overall analysis.
  // Should fail only when no analysis can be performed.
  optional Status status = 3;
}
